--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>docker-integration</finalName>
 	</build>
 
 </project>
